--- a/testModel.ipynb
+++ b/testModel.ipynb
@@ -11,19 +11,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "import numpy as np\n",
     "from PIL import Image\n",
-    "import os\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Downscale thumbnails to 360p for training\n",
-    "img_size = (480, 360)\n",
-    "batch_size = 128\n",
-    "epochs = 64"
+    "import os"
    ]
   },
   {
@@ -32,6 +20,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Downscale thumbnails to 360p for training\n",
+    "img_size = (480, 360)\n",
+    "\n",
     "def loadImage(path):\n",
     "\timg = Image.open(path, 'r').convert('RGB').resize(img_size)\n",
     "\t# Convert colors from 0-255 to 0-1\n",
@@ -104,60 +95,8 @@
     "\t\t# Output has 1 dimension: view count / subscriber count\n",
     "\t\tkeras.layers.Dense(1)\n",
     "\t]\n",
-    ")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"sequential\"\n",
-      "_________________________________________________________________\n",
-      " Layer (type)                Output Shape              Param #   \n",
-      "=================================================================\n",
-      " conv2d (Conv2D)             (None, 180, 240, 8)       224       \n",
-      "                                                                 \n",
-      " conv2d_1 (Conv2D)           (None, 90, 120, 16)       1168      \n",
-      "                                                                 \n",
-      " max_pooling2d (MaxPooling2D  (None, 45, 60, 16)       0         \n",
-      " )                                                               \n",
-      "                                                                 \n",
-      " conv2d_2 (Conv2D)           (None, 23, 30, 32)        4640      \n",
-      "                                                                 \n",
-      " conv2d_3 (Conv2D)           (None, 12, 15, 32)        9248      \n",
-      "                                                                 \n",
-      " max_pooling2d_1 (MaxPooling  (None, 6, 7, 32)         0         \n",
-      " 2D)                                                             \n",
-      "                                                                 \n",
-      " conv2d_4 (Conv2D)           (None, 3, 4, 64)          18496     \n",
-      "                                                                 \n",
-      " conv2d_5 (Conv2D)           (None, 2, 2, 64)          36928     \n",
-      "                                                                 \n",
-      " max_pooling2d_2 (MaxPooling  (None, 1, 1, 64)         0         \n",
-      " 2D)                                                             \n",
-      "                                                                 \n",
-      " flatten (Flatten)           (None, 64)                0         \n",
-      "                                                                 \n",
-      " dense (Dense)               (None, 16384)             1064960   \n",
-      "                                                                 \n",
-      " dense_1 (Dense)             (None, 4096)              67112960  \n",
-      "                                                                 \n",
-      " dense_2 (Dense)             (None, 1)                 4097      \n",
-      "                                                                 \n",
-      "=================================================================\n",
-      "Total params: 68,252,721\n",
-      "Trainable params: 68,252,721\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n"
-     ]
-    }
-   ],
-   "source": [
+    ")\n",
+    "\n",
     "# 'mae' seems slightly better than 'mse'\n",
     "model.compile(optimizer=keras.optimizers.Adam(learning_rate=0.0001), loss='mae')\n",
     "model.summary()"
@@ -304,6 +243,9 @@
     }
    ],
    "source": [
+    "batch_size = 128\n",
+    "epochs = 64\n",
+    "\n",
     "history = model.fit(x_train, y_train,\n",
     "\tbatch_size=batch_size,\n",
     "\tepochs=epochs,\n",
@@ -342,23 +284,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4/4 [==============================] - 0s 28ms/step\n"
-     ]
-    }
-   ],
-   "source": [
-    "preds = model.predict(x_valid).flatten()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [
@@ -376,6 +301,8 @@
     }
    ],
    "source": [
+    "preds = model.predict(x_valid).flatten()\n",
+    "\n",
     "num_results = 32\n",
     "width = 0.35\n",
     "fig, ax = plt.subplots()\n",
@@ -393,7 +320,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.5 64-bit",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -407,12 +334,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "88076a93485f247efb60c9d00611d55633c59f1fed461cddd11c3c36f6a72202"
+    "hash": "67759c7270b54abb58d1efb12f2ccfbec46054dee60f7fe60b4bb0322336d082"
    }
   }
  },
