--- a/CalebNetv2.ipynb
+++ b/CalebNetv2.ipynb
@@ -8,7 +8,6 @@
    "source": [
     "from tensorflow import keras\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.model_selection import train_test_split\n",
     "import numpy as np\n",
     "from PIL import Image\n",
     "import os\n",
@@ -58,7 +57,7 @@
     "\tviews, subs = img[12:-4].split(\"_\")\n",
     "\tviews_mag = len(views) - 1\n",
     "\ttarget.append(views_mag)\n",
-    "\tsubs_mag = (len(views) - 1) / 10 # some dog shit normalisation\n",
+    "\tsubs_mag = len(subs) - 1\n",
     "\tsubs_src.append(subs_mag)\n",
     "\n",
     "# Convert to numpy arrays\n",
@@ -326,6 +325,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.save('model.tf') # TF is newer model format than H5"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 73,
    "metadata": {},
    "outputs": [
@@ -427,7 +435,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.5 64-bit",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -441,12 +449,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "88076a93485f247efb60c9d00611d55633c59f1fed461cddd11c3c36f6a72202"
+    "hash": "67759c7270b54abb58d1efb12f2ccfbec46054dee60f7fe60b4bb0322336d082"
    }
   }
  },
