save h5 instead of tf model

--- a/CalebNetv2.ipynb
+++ b/CalebNetv2.ipynb
@@ -329,7 +329,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save('model.tf') # TF is newer model format than H5"
+    "model.save('model.h5') # .tf is newer than .h5, but makes a folder"
    ]
   },
   {
