add normalization back again soz caleb i get it now

--- a/CalebNetv2.ipynb
+++ b/CalebNetv2.ipynb
@@ -57,7 +57,7 @@
     "\tviews, subs = img[12:-4].split(\"_\")\n",
     "\tviews_mag = len(views) - 1\n",
     "\ttarget.append(views_mag)\n",
-    "\tsubs_mag = len(subs) - 1\n",
+    "\tsubs_mag = (len(subs) - 1) / 10 # some dog shit normalisation\n",
     "\tsubs_src.append(subs_mag)\n",
     "\n",
     "# Convert to numpy arrays\n",
