normalize sub count in test

--- a/CalebNetv2.ipynb
+++ b/CalebNetv2.ipynb
@@ -428,7 +428,7 @@
    "source": [
     "img = loadImage(\"maxresdefault.jpg\")\n",
     "thing1 = np.array([img])\n",
-    "thing2 = np.array([9])\n",
+    "thing2 = np.array([0.9]) # Normalized subcount 0-1\n",
     "np.argmax(model.predict([thing1, thing2]), axis=1)"
    ]
   }
