update testmodel, remove unneeded np array cast

--- a/CalebNetv2.ipynb
+++ b/CalebNetv2.ipynb
@@ -79,16 +79,14 @@
     "valid_from = train_to\n",
     "valid_to = len(source)\n",
     "\n",
-    "x_train_p1 = np.array(source[0: train_to])\n",
-    "x_train_p2 = np.array(subs_src[0: train_to])\n",
-    "y_train = np.array(target[0: train_to])\n",
-    "\n",
+    "x_train_p1 = source[0:train_to]\n",
+    "x_train_p2 = subs_src[0:train_to]\n",
+    "y_train = target[0:train_to]\n",
     "x_train = [x_train_p1, x_train_p2]\n",
     "\n",
-    "x_valid_p1 = np.array(source[valid_from: valid_to])\n",
-    "x_valid_p2 = np.array(subs_src[valid_from: valid_to])\n",
-    "y_valid = np.array(target[valid_from: valid_to])\n",
-    "\n",
+    "x_valid_p1 = source[valid_from:valid_to]\n",
+    "x_valid_p2 = subs_src[valid_from:valid_to]\n",
+    "y_valid = target[valid_from:valid_to]\n",
     "x_valid = [x_valid_p1, x_valid_p2]"
    ]
   },
